Homepage and repo

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@koerber/yaml",
   "version": "1.0.0",
   "description": "Simple extension to JS-YAML",
+  "homepage": "https://github.com/KoerberDigitalDevTeam/yaml",
+  "repository": "gith@github.com/KoerberDigitalDevTeam/yaml",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -e js,yml,json -x npm run build",
