--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@koerber/yaml",
-  "version": "1.0.5",
+  "name": "@koerber-internal/yaml",
+  "version": "1.0.6",
   "description": "Simple extension to JS-YAML",
   "homepage": "https://github.com/KoerberDigitalDevTeam/yaml",
   "repository": "gith@github.com/KoerberDigitalDevTeam/yaml",
@@ -22,12 +22,12 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-google": "^0.13.0",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
     "js-yaml": "^3.13.1",
-    "mocha": "^6.1.4",
+    "mocha": "^7.0.0",
     "nodemon": "^1.19.1",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.0",
     "source-map-support": "^0.5.12"
   },
   "peerDependencies": {
@@ -35,5 +35,8 @@
   },
   "files": [
     "lib/"
-  ]
+  ],
+  "publishConfig": {
+    "registry": "https://connyun.jfrog.io/connyun/api/npm/npm-local/"
+  }
 }
